kube/ufo/ufo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ufo-deployment
  namespace: ufo-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ufo-app
  template:
    metadata:
      labels:
        app: ufo-app
    spec:
      hostNetwork: false
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: ufo-app
        image: fak3/ufo:0.4
        ports:
        - containerPort: 8000
