kube/ufo/ufo-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: ufo-ns
  name: ufo-httproute
spec:
  parentRefs:
  - name: ufo-gateway
  hostnames:
  - "vybory.live"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ufo-service
      port: 80
